kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    kubernetes.io/ingress.class: alb
  name: ingress
  namespace: org
spec:
  rules:
  - host: "org.miraki.ai"
    http:
      paths:
      - path: /core
        pathType: Prefix
        backend:
          service:
            name: django
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mirakiui
            port:
              number: 80
